Moving Zeros To The End

--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 
   <script src="./Multiples of 3 or 5/Multiples.js"></script>
   <script src="./Narcissistic Number/narcissisticNumber.js"></script>
+  <script src="./Moving Zeros To The End/movingZeros.js"></script>
 </html>
