Where my anagrams at

--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
   <script src="./Narcissistic Number/narcissisticNumber.js"></script>
   <script src="./Moving Zeros To The End/movingZeros.js"></script>
   <script src="./Merged String Checker/mergedStringChecker.js"></script>
+  <script src="./Where my anagrams at/WhereMyAnagramsAt.js"></script>
 </html>
