--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
   <script src="./Moving Zeros To The End/movingZeros.js"></script>
   <script src="./Merged String Checker/mergedStringChecker.js"></script>
   <script src="./Where my anagrams at/WhereMyAnagramsAt.js"></script>
+  <script src="./Next smaller number with the same digits/nextSmallerNumberWithTheSameDigits.js"></script>
 </html>
