Human Readable Time

--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
   <script src="./Merged String Checker/mergedStringChecker.js"></script>
   <script src="./Where my anagrams at/WhereMyAnagramsAt.js"></script>
   <script src="./Next smaller number with the same digits/nextSmallerNumberWithTheSameDigits.js"></script>
+  <script src="./Human Readable Time/humanReadableTime.js"></script>
 </html>
