--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
   <script src="./Where my anagrams at/WhereMyAnagramsAt.js"></script>
   <script src="./Next smaller number with the same digits/nextSmallerNumberWithTheSameDigits.js"></script>
   <script src="./Human Readable Time/humanReadableTime.js"></script>
+  <script src="./Snail/Snail.js"></script>
 </html>
