Stop gninnipS My sdroW!

--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
   <script src="./Next smaller number with the same digits/nextSmallerNumberWithTheSameDigits.js"></script>
   <script src="./Human Readable Time/humanReadableTime.js"></script>
   <script src="./Snail/Snail.js"></script>
+  <script src="./Stop gninnipS My sdroW!/StopGninnipsMySdroW!.js"></script>
 </html>
