Find the odd int

--- a/index.html
+++ b/index.html
@@ -60,4 +60,5 @@
   <script src="./Snail/Snail.js"></script>
   <script src="./Gap in Primes/Gap in Primes.js"></script>
   <script src="./Last digit of a large number/LastDigitOfALargeNumber.js"></script>
+  <script src="./Find the odd int/findTheOddInt.js"></script>
 </html>
