Extract the domain name from a URL

--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
   <script src="./Gap in Primes/Gap in Primes.js"></script>
   <script src="./Last digit of a large number/LastDigitOfALargeNumber.js"></script>
   <script src="./Find the odd int/findTheOddInt.js"></script>
+  <script src="./ExtractTheDomainNameFromaURL/ExtractTheDomainNameFromaURL.js"></script>
 </html>
