Pete, The Baker

--- a/index.html
+++ b/index.html
@@ -62,4 +62,5 @@
   <script src="./Last digit of a large number/LastDigitOfALargeNumber.js"></script>
   <script src="./Find the odd int/findTheOddInt.js"></script>
   <script src="./ExtractTheDomainNameFromaURL/ExtractTheDomainNameFromaURL.js"></script>
+  <script src="./PeteTheBaker/peteTheBaker.js"></script>
 </html>
