--- a/index.html
+++ b/index.html
@@ -63,4 +63,5 @@
   <script src="./Find the odd int/findTheOddInt.js"></script>
   <script src="./ExtractTheDomainNameFromaURL/ExtractTheDomainNameFromaURL.js"></script>
   <script src="./PeteTheBaker/peteTheBaker.js"></script>
+  <script src="./ArrayDiff/Array.diff.js"></script>
 </html>
