Sum of Digits / Digital Root

--- a/index.html
+++ b/index.html
@@ -64,4 +64,5 @@
   <script src="./ExtractTheDomainNameFromaURL/ExtractTheDomainNameFromaURL.js"></script>
   <script src="./PeteTheBaker/peteTheBaker.js"></script>
   <script src="./ArrayDiff/Array.diff.js"></script>
+  <script src="./Sum of Digits or Digital Root/SumOfDigitsOrDigitalRoot.js"></script>
 </html>
