The Hashtag Generator

--- a/index.html
+++ b/index.html
@@ -65,4 +65,5 @@
   <script src="./PeteTheBaker/peteTheBaker.js"></script>
   <script src="./ArrayDiff/Array.diff.js"></script>
   <script src="./Sum of Digits or Digital Root/SumOfDigitsOrDigitalRoot.js"></script>
+  <script src="./The Hashtag Generator/TheHashtagGenerator.js"></script>
 </html>
