--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
   <script src="./ArrayDiff/Array.diff.js"></script>
   <script src="./Sum of Digits or Digital Root/SumOfDigitsOrDigitalRoot.js"></script>
   <script src="./The Hashtag Generator/TheHashtagGenerator.js"></script>
-  <!-- <script src="./Don't give me five! Really!/"></script> -->
   <script src="./Counting Duplicates/CountingDuplicates.js"></script>
   <script src="./Maximum subarray sum/MaximumSubarraySum.js"></script>
+  <script src="./Message Validator/messageValidator.js"></script>
+  <!-- <script src="./Don't give me five! Really!/"></script> -->
 </html>
