Ascend, Descend, Repeat

--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
       console.log(e.target)
     }
 
+    // console.log("1")
+
+    // setTimeout(() => {
+    //   console.log("2")
+    // }, 1000)
+
+    // const promise = new Promise((resolve, reject) => {
+    //   console.log("3")
+    //   resolve("4")
+    // }).then((value) => console.log(value))
+    // console.log("5")
+
     // block3.addEventListener("click", (e) => console.log(e.currentTarget))
   </script>
   <script src="./Multiples of 3 or 5/Multiples.js"></script>
@@ -88,4 +100,5 @@
   <script src="./Maximum subarray sum/MaximumSubarraySum.js"></script>
   <script src="./Message Validator/messageValidator.js"></script>
   <script src="./Don't give me five! Really!/dontGiveMeFive!Really!.js"></script>
+  <script src="./Ascend, Descend, Repeat/AscendDescendRepeat.js"></script>
 </html>
