Count the photos!

--- a/index.html
+++ b/index.html
@@ -101,4 +101,5 @@
   <script src="./Message Validator/messageValidator.js"></script>
   <script src="./Don't give me five! Really!/dontGiveMeFive!Really!.js"></script>
   <script src="./Ascend, Descend, Repeat/AscendDescendRepeat.js"></script>
+  <script src="./Count the photos!/CountThePhotos.js"></script>
 </html>
