--- a/index.html
+++ b/index.html
@@ -102,4 +102,5 @@
   <script src="./Don't give me five! Really!/dontGiveMeFive!Really!.js"></script>
   <script src="./Ascend, Descend, Repeat/AscendDescendRepeat.js"></script>
   <script src="./Count the photos!/CountThePhotos.js"></script>
+  <script src="./Barista problem/BaristaProblem.js"></script>
 </html>
