Even Fibonacci Sum

--- a/index.html
+++ b/index.html
@@ -103,4 +103,5 @@
   <script src="./Ascend, Descend, Repeat/AscendDescendRepeat.js"></script>
   <script src="./Count the photos!/CountThePhotos.js"></script>
   <script src="./Barista problem/BaristaProblem.js"></script>
+  <script src="./Even Fibonacci Sum/evenFibonacciSum.js"></script>
 </html>
