--- a/index.html
+++ b/index.html
@@ -108,4 +108,6 @@
   <script src="./Create Phone Number/createPhoneNumber.js"></script>
   <script src="./Bit Counting/bitCounting.js"></script>
   <script src="./Find The Parity Outlier/findTheParityOutlier.js"></script>
+  <script src="./Duplicate Encoder/duplicateEncoder.js"></script>
+  <script src="./test/test.js"></script>
 </html>
