Simple Pig Latin & Advanced Pig Latin

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <script src="./Human Readable Time/humanReadableTime.js"></script>
   <script src="./Stop gninnipS My sdroW!/StopGninnipsMySdroW!.js"></script>
   <script src="./Snail/Snail.js"></script>
-  <script src="./Gap in Primes/Gap in Primes.js"></script>
+  <!-- <script src="./Gap in Primes/Gap in Primes.js"></script> -->
   <script src="./Last digit of a large number/LastDigitOfALargeNumber.js"></script>
   <script src="./Find the odd int/findTheOddInt.js"></script>
   <script src="./ExtractTheDomainNameFromaURL/ExtractTheDomainNameFromaURL.js"></script>
@@ -99,7 +99,7 @@
   <script src="./Counting Duplicates/CountingDuplicates.js"></script>
   <script src="./Maximum subarray sum/MaximumSubarraySum.js"></script>
   <script src="./Message Validator/messageValidator.js"></script>
-  <script src="./Don't give me five! Really!/dontGiveMeFive!Really!.js"></script>
+  <!-- <script src="./Don't give me five! Really!/dontGiveMeFive!Really!.js"></script> -->
   <script src="./Ascend, Descend, Repeat/AscendDescendRepeat.js"></script>
   <script src="./Count the photos!/CountThePhotos.js"></script>
   <script src="./Barista problem/BaristaProblem.js"></script>
@@ -109,5 +109,7 @@
   <script src="./Bit Counting/bitCounting.js"></script>
   <script src="./Find The Parity Outlier/findTheParityOutlier.js"></script>
   <script src="./Duplicate Encoder/duplicateEncoder.js"></script>
-  <script src="./test/test.js"></script>
+  <script src="./Simple Pig Latin/simplePigLatin.js"></script>
+  <script src="./Advanced Pig Latin/advancedPigLatin.js"></script>
+  <!-- <script src="./test/test.js"></script> -->
 </html>
