Delete occurrences of an element if it occurs more than n times

--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
   <script src="./Simple Pig Latin/simplePigLatin.js"></script>
   <script src="./Advanced Pig Latin/advancedPigLatin.js"></script>
   <script src="./Persistent Bugger/persistentBugger.js"></script>
+  <script src="./Delete occurrences of an element if it occurs more than n times/DeleteOccurrences.js"></script>
   <!-- <script src="./test/test.js"></script> -->
 </html>
