--- a/index.html
+++ b/index.html
@@ -7,64 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div id="block1">
-      block1
-      <div id="block2">
-        block2
-        <div id="block3">block3</div>
-      </div>
-    </div> -->
-  </body>
-
-  <style>
-    .active {
-      background-color: yellow;
-    }
-
-    #block1,
-    #block2,
-    #block3 {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    body {
-      width: 100%;
-      height: 100vh;
-    }
-    #block1 {
-      background-color: red;
-      width: 500px;
-      height: 500px;
-    }
-    #block2 {
-      background-color: green;
-      width: 300px;
-      height: 300px;
-    }
-    #block3 {
-      background-color: blue;
-      width: 100px;
-      height: 100px;
-    }
-  </style>
-  <script>
-    // const block1 = document.getElementById("block1");
-    // const block2 = document.getElementById("block2");
-    // const block3 = document.getElementById("block3");
-
-    // block1.addEventListener("click", (e) => fn(e));
-    // block2.addEventListener("click", (e) => fn(e));
-    // block3.addEventListener("click", (e) => fn(e));
-    // block1.addEventListener("click", (e) => console.log(e.target))
-    // block2.addEventListener("click", (e) => console.log(e.target))
-    // block3.addEventListener("click", (e) => console.log(e.target))
-
-    // const fn = (e) => {
-    //   e.stopPropagation();
-    //   console.log(e.target);
-    // };
-  </script>
+    <!--  -->
   <script src="./Multiples of 3 or 5/Multiples.js"></script>
   <script src="./Narcissistic Number/narcissisticNumber.js"></script>
   <script src="./Moving Zeros To The End/movingZeros.js"></script>
@@ -99,5 +42,10 @@
   <script src="./Advanced Pig Latin/advancedPigLatin.js"></script>
   <script src="./Persistent Bugger/persistentBugger.js"></script>
   <script src="./Delete occurrences of an element if it occurs more than n times/DeleteOccurrences.js"></script>
+  <script src="./Greedy thief/GreedyThief.js"></script>
+  <script src="./Your order, please/YourOrderPlease.js"></script>
+  <script src="./Two Sum/twoSum.js"></script>
+  <script src="test.js"></script>
+  <!--  -->
   <!-- <script src="./test/test.js"></script> -->
 </html>
