--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
   <script src="./Greedy thief/GreedyThief.js"></script>
   <script src="./Your order, please/YourOrderPlease.js"></script>
   <script src="./Two Sum/twoSum.js"></script>
+  <script src="./UniqueInOrder/uniqueInOrder.js"></script>
+  <script src="./isPangram/isPangram.js"></script>
   <script src="test.js"></script>
   <!--  -->
   <!-- <script src="./test/test.js"></script> -->
