Take a Ten Minutes Walk

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="./UniqueInOrder/uniqueInOrder.js"></script>
   <script src="./isPangram/isPangram.js"></script>
   <script src="Coding Meetup 15/findOddNames.js"></script>
+  <script src="Take a Ten Minutes Walk/isValidWalk.js"></script>
   <!-- <script src="test.js"></script> -->
   <!--  -->
   <!-- <script src="./test/test.js"></script> -->
